added index.html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Login page
 color:#00FF00;>
 Simple Login Page
 </h1>
+<h1>This Page</h1>
 <form name="login">
 Username<input type="text" name="userid"/>
 Password<input type="password" name="pswrd"/>
